--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "serve-favicon": "~2.3.0",
 
     "sha1": "1.1.1",
-    "request": "2.72.0"
+    "request": "2.72.0",
+    "sha256 ": "0.2.0",
+    "qs": "6.1.0"
   }
 }
