--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "sha1": "1.1.1",
     "request": "2.72.0",
     "sha256 ": "0.2.0",
-    "qs": "6.1.0"
+    "qs": "6.1.0",
+    "uuid": "2.0.1"
   }
 }
