--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "request": "2.72.0",
     "sha256 ": "0.2.0",
     "qs": "6.1.0",
-    "uuid": "2.0.1"
+    "uuid": "2.0.1",
+    "socket.io": "",
+    "cors": "2.7.1"
   }
 }
